Fixed the form to have better spacing and changed the submit button

--- a/_work/css/main.css
+++ b/_work/css/main.css
@@ -68,24 +68,39 @@ nav a.current {
 form {
 	font-size: 1rem;
 	text-transform: uppercase;
+	padding-bottom: 1rem;
 }
 
 form input, form textarea {
 	display: block;
 	font-family: Arial, Verdana, sans-serif;
 	font-size: 1rem;
-	padding: 0.25rem;
+	padding: 0.5rem;
 	border: 0.1rem solid #999; 
-	width:20%;
+	width:100%;
+	margin-bottom: 1rem;
 }
 
 form input:hover, form textarea:hover {
-	border-color: orange;
+	border-color: #DB745B;
 }
 
 form textarea {
 	width: 100%;
-	#form-comment {
-		height: 6rem;
-	}
+	height: 6rem;
+}
+
+.button {
+	background-color:#2b68a6;
+	display:inline-block;
+	color:#ffffff;
+	font-size: 1.25rem;
+	height:2.5rem;
+	line-height:2.5rem;
+	width:6rem;
+	text-align:center;
+}
+
+.button:hover {
+	background-color:#DB745B;
 }
